[package]
name = "battlefield"
version = "0.1.0"
edition = "2024"
authors = ["ranpy13 <85052085+ranpy13@users.noreply.github.com>"]

[dependencies]
ordered-float = "5.1.0"
# Current versions can be found at https://support.leetcode.com/hc/en-us/articles/360011833974-What-are-the-environments-for-the-programming-languages
itertools = "0.14"
rand = "0.8"
regex = "1"
cargo-leet = "0.4.0"
rstest = "0.26.1"
